--- a/src/styles/_productDetail.scss
+++ b/src/styles/_productDetail.scss
@@ -2,11 +2,7 @@
 // Choice product details stylings
 .container {
   max-width: 1500px;
-  // height: 28rem;
-  // overflow-y: scroll;
-  // padding: 5rem 0;
   margin: 0 auto;
-  /* background: var(--mainRed); */
 
   .elements {
     padding: 2rem;
@@ -15,7 +11,6 @@
 
     .image-detail {
       margin: 0 auto;
-      // background: red;
       padding: 1rem;
 
       img {
@@ -25,10 +20,7 @@
     }
 
     .product-details {
-      // background: red;
-
       .main-details {
-        // background: blue;
         padding: 1rem;
 
         p {
@@ -76,7 +68,7 @@
 // Other products stylings
 .other-products-display {
   margin-right: 2rem;
-  // border-left: 1px solid #000000;
+
   .product-heading {
     text-align: center;
     font-size: 1.5rem;
@@ -92,16 +84,16 @@
     align-items: flex-start;
     flex-direction: row;
     flex-wrap: nowrap;
+    width: 90%;
+    margin: 0 2rem 1rem;
     overflow-x: scroll;
-    margin-bottom: 2rem;
-    // border-left: 1px solid #000000;
-    // border-bottom: 1px solid #000000;
-    // padding: 0 0 0.5rem;
+    background: var(--subGrey);
+    padding: 1rem 0 0.2rem;
 
     .other-products {
       margin: 0 0.5rem 1rem;
-      width: 100%;
       border-bottom: 1px solid black;
+      box-shadow: 0 0 0.2rem var(--mainBlack);
 
       &:last-child {
         margin: 0 0.5rem 1rem;
@@ -110,9 +102,6 @@
       }
 
       .other-products-image {
-        max-width: 150rem;
-        max-height: 100vh;
-
         img {
           width: 15rem;
           height: 15rem;
@@ -161,7 +150,25 @@
       overflow: hidden;
       overflow-y: scroll;
       max-height: 70vh;
-      // position: fixed;
+      width: 25rem;
+
+      .other-products {
+        margin: 0.5rem 0.5rem;
+        margin-left: 10%;
+        width: 80%;
+
+        &:last-child {
+          margin: 0.5rem 0.5rem;
+          margin-left: 10%;
+          width: 80%;
+        }
+
+        .other-products-image {
+          img {
+            width: 100%;
+          }
+        }
+      }
     }
   }
 }
