--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -29,6 +29,8 @@
     padding-bottom: 1rem;
     width: 14rem;
     border-bottom: 0.1rem solid #000;
+    border-radius: 3px;
+    overflow: hidden;
     box-shadow: 0 0 0.2rem #000;
     background: #eee;
     transition: all 0.5s;
