--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -1,7 +1,9 @@
 /* Stylings for products page */
 .all_products {
   padding: 3rem 0;
-  /* background: red; */
+  max-width: 100rem;
+  margin: 0 auto;
+  background: red;
 
   .all_products_body {
     .products_header {
@@ -12,46 +14,46 @@
       color: #002;
     }
   }
-}
 
-.products {
-  display: flex;
-  justify-content: left;
-  align-items: flex-start;
-  flex-flow: row wrap;
-  padding: 2rem 0;
-  margin: 0 auto;
-  max-width: 1024px;
-  /* background: #002; */
+  .products {
+    display: flex;
+    justify-content: left;
+    align-items: flex-start;
+    flex-flow: row wrap;
+    // padding: 2rem 0;
+    // margin: 0 auto;
+    max-width: 100rem;
+    background: #002;
 
-  .product {
-    margin: 1rem 2rem;
-    padding-bottom: 1rem;
-    width: 14rem;
-    border-bottom: 0.1rem solid #000;
-    border-radius: 3px;
-    overflow: hidden;
-    box-shadow: 0 0 0.2rem #000;
-    background: #eee;
-    transition: all 0.5s;
+    .product {
+      margin: 1rem 2rem;
+      padding-bottom: 1rem;
+      width: 14rem;
+      border-bottom: 0.1rem solid #000;
+      border-radius: 3px;
+      overflow: hidden;
+      box-shadow: 0 0 0.2rem #000;
+      background: #eee;
+      transition: all 0.5s;
 
-    img {
-      width: 100%;
-      height: 10rem;
-    }
+      img {
+        width: 100%;
+        height: 10rem;
+      }
 
-    .product_name {
-      color: red;
-      font-size: 0.7rem;
-      font-weight: 600;
-      padding: 0.2rem 0;
-    }
+      .product_name {
+        color: red;
+        font-size: 0.9rem;
+        font-weight: 600;
+        padding: 0.2rem 0;
+      }
 
-    .product_price {
-      color: #000;
-      font-size: 0.8rem;
-      font-weight: bold;
-      padding: 0.2rem 0;
+      .product_price {
+        color: #000;
+        font-size: 1.2rem;
+        font-weight: bold;
+        padding: 0.2rem 0;
+      }
     }
   }
 }
