--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -3,7 +3,7 @@
   padding: 3rem 0;
   max-width: 100rem;
   margin: 0 auto;
-  background: red;
+  // background: red;
 
   .all_products_body {
     .products_header {
@@ -13,46 +13,47 @@
       font-weight: 600;
       color: #002;
     }
-  }
 
-  .products {
-    display: flex;
-    justify-content: left;
-    align-items: flex-start;
-    flex-flow: row wrap;
-    // padding: 2rem 0;
-    // margin: 0 auto;
-    max-width: 100rem;
-    background: #002;
+    .products {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: flex-start;
+      flex-flow: row wrap;
+      padding: 2rem 0;
+      margin: 0 auto;
+      max-width: 70rem;
+      // background: #002;
 
-    .product {
-      margin: 1rem 2rem;
-      padding-bottom: 1rem;
-      width: 14rem;
-      border-bottom: 0.1rem solid #000;
-      border-radius: 3px;
-      overflow: hidden;
-      box-shadow: 0 0 0.2rem #000;
-      background: #eee;
-      transition: all 0.5s;
+      .product {
+        margin: 1.2rem 1.1rem;
+        // margin-left: 2.1rem;
+        padding-bottom: 1rem;
+        width: 18rem;
+        border-bottom: 0.1rem solid #000;
+        border-radius: 3px;
+        overflow: hidden;
+        box-shadow: 0 0 0.2rem #000;
+        background: #eee;
+        transition: all 0.5s;
 
-      img {
-        width: 100%;
-        height: 10rem;
-      }
+        img {
+          width: 100%;
+          height: 15rem;
+        }
 
-      .product_name {
-        color: red;
-        font-size: 0.9rem;
-        font-weight: 600;
-        padding: 0.2rem 0;
-      }
+        .product_name {
+          color: red;
+          font-size: 0.9rem;
+          font-weight: 600;
+          padding: 0.2rem 0;
+        }
 
-      .product_price {
-        color: #000;
-        font-size: 1.2rem;
-        font-weight: bold;
-        padding: 0.2rem 0;
+        .product_price {
+          color: #000;
+          font-size: 1.2rem;
+          font-weight: bold;
+          padding: 0.2rem 0;
+        }
       }
     }
   }
@@ -64,92 +65,96 @@
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (width: 768px) {
   .products {
-    width: 768px;
+    width: 700px;
+    max-width: 700px;
+    margin: 0 auto;
 
     .product {
-      margin: 1rem 4rem;
+      margin: 1rem;
+      margin-left: 9rem;
     }
   }
 }
 
-@media screen and (max-width: 767px) {
-  .products {
-    width: 550px;
-    /* background: #002; */
+// @media screen and (max-width: 767px) {
+//   .products {
+//     width: 550px;
+//     // background: #002;
+//     // margin-left: 50rem;
 
-    .product {
-      margin: 0.9rem auto;
-      width: 51%;
-    }
-  }
-}
+//     .product {
+//       margin: 0.9rem auto;
+//       width: 51%;
+//     }
+//   }
+// }
 
-@media screen and (max-width: 600px) {
-  .products {
-    width: 400px;
-    /* background: #002; */
+// @media screen and (max-width: 600px) {
+//   .products {
+//     width: 400px;
+//     /* background: #002; */
 
-    .product {
-      margin: 0.9rem auto;
-      width: 51%;
+//     .product {
+//       margin: 0.9rem auto;
+//       width: 51%;
 
-      img {
-        height: 10rem;
-      }
-    }
-  }
-}
+//       img {
+//         height: 10rem;
+//       }
+//     }
+//   }
+// }
 
-@media screen and (max-width: 360px) {
-  .products {
-    width: 300px;
+// @media screen and (max-width: 360px) {
+//   .products {
+//     width: 300px;
 
-    .product {
-      margin: 0.9rem auto;
-      width: 80%;
+//     .product {
+//       margin: 0.9rem auto;
+//       width: 80%;
 
-      img {
-        height: 10rem;
-      }
-    }
-  }
-}
+//       img {
+//         height: 10rem;
+//       }
+//     }
+//   }
+// }
 
-@media screen and (max-width: 450px) {
-  .products {
-    width: 350px;
+// @media screen and (max-width: 450px) {
+//   .products {
+//     width: 350px;
 
-    .product {
-      margin: 0.9rem auto;
-      width: 80%;
-    }
-  }
-}
+//     .product {
+//       margin: 0.9rem auto;
+//       width: 80%;
+//     }
+//   }
+// }
 
-@media screen and (max-width: 320px) {
-  .products {
-    width: 280px;
+// @media screen and (max-width: 320px) {
+//   .products {
+//     width: 280px;
 
-    .product {
-      margin: 0.9rem auto;
-      width: 80%;
-    }
-  }
-}
+//     .product {
+//       margin: 0.9rem auto;
+//       width: 80%;
+//     }
+//   }
+// }
 
-@media screen and (max-width: 245px) {
-  .products {
-    width: 200px;
+// @media screen and (max-width: 245px) {
+//   .products {
+//     width: 200px;
 
-    .product {
-      margin: 0.9rem auto;
-      width: 10rem;
+//     .product {
+//       margin: 0.9rem auto;
+//       width: 10rem;
 
-      img {
-        height: 8rem;
-      }
-    }
-  }
-}
+//       img {
+//         height: 8rem;
+//       }
+//     }
+//   }
+// }
