adding login functionality

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -285,6 +285,7 @@ body {
   font-size: 1rem;
   color: var(--mainBlack);
   font-weight: 500;
+  padding: 1px 20px;
 
   &.alert-danger {
     background: rgba(240, 126, 145, 0.4);
