--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -286,8 +286,8 @@ body {
 /* Stylings for project alerts starts */
 .alert {
   width: 100%;
-  min-height: 1rem;
-  line-height: 1.5rem;
+  // min-height: 1rem;
+  line-height: 2rem;
   font-size: 1rem;
   color: var(--mainBlack);
   font-weight: 500;
