--- a/src/styles/_searchBar.scss
+++ b/src/styles/_searchBar.scss
@@ -1,36 +1,52 @@
 /* Stylings for SearchBar */
-.search_section {
-  display: flex;
-  background: rgba(0, 0, 0, 0.2);
-  padding: 1rem;
+.search_box {
+  position: sticky;
+  top: 5.4rem;
+  // z-index: 111;
 
-  form {
-    background: red;
-    width: 100%;
+  .search_section {
+    display: flex;
+    background: rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    // position: sticky;
+    // top: 100rem !important;
 
-    input {
-      padding: 0.5rem 0.4rem;
-      outline: none;
-      height: 1rem;
-      min-width: 10rem;
-      border: none;
-      border-radius: 0.2rem 0 0 0.2rem;
-      font-size: 0.95rem;
+    form {
+      // background: red;
+      width: 100%;
 
-      &::placeholder {
+      input {
+        padding: 0.5rem 0.4rem;
+        outline: none;
+        height: 1rem;
+        width: 60%;
+        border: none;
+        border-radius: 0.2rem 0 0 0.2rem;
         font-size: 0.95rem;
+
+        &::placeholder {
+          font-size: 0.95rem;
+        }
+      }
+
+      button {
+        // background: var(--mainGrey);
+        color: var(--mainBlack);
+        // padding: 0.5rem;
+        width: 4rem;
+        height: 2.1rem;
+        cursor: pointer;
+        transition: all 0.5s;
+        border-radius: 0 0.2rem 0.2rem 0;
+        outline: none;
+        font-size: 0.9rem;
+        font-weight: 700;
       }
     }
-
-    button {
-      // background: var(--mainGrey);
-      color: var(--mainBlack);
-      padding: 0.5rem;
-      height: 2.1rem;
-      cursor: pointer;
-      transition: all 0.5s;
-      border-radius: 0 0.2rem 0.2rem 0;
-      outline: none;
-    }
+  }
+}
+@media screen and (max-width: 700px) {
+  .search_box {
+    position: static;
   }
 }
