--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -3,7 +3,6 @@
   padding: 3rem 0;
   max-width: 100rem;
   margin: 0 auto;
-  // background: red;
 
   .all_products_body {
     .products_header {
@@ -25,7 +24,7 @@
       // background: #002;
 
       .product {
-        margin: 1.2rem 0.2rem;
+        margin: 1.2rem 1rem;
         padding-bottom: 1rem;
         width: 100%;
         border-bottom: 0.1rem solid #000;
@@ -58,12 +57,12 @@
   }
 }
 
-@media screen and (min-width: 670px) {
+@media screen and (min-width: 750px) {
   .products {
     width: 70rem;
 
     .product {
-      margin: 1rem 0.9rem !important;
+      margin: 1rem 2rem !important;
       width: 18rem !important;
 
       img {
@@ -73,3 +72,20 @@
     }
   }
 }
+
+// @media screen and (min-width: 1010px) {
+//   .products {
+//     .product {
+//       margin: 1rem 1.6rem !important;
+//       width: 18rem !important;
+//     }
+//   }
+// }
+
+// @media screen and (min-width: 1100px) {
+//   .products {
+//     .product {
+//       margin: 1rem 2.6rem !important;
+//     }
+//   }
+// }
