--- a/src/styles/_searchBar.scss
+++ b/src/styles/_searchBar.scss
@@ -10,12 +10,15 @@
 
     div {
       width: 100%;
+      display: flex;
+      // background-color: red;
+      // margin: 0 auto;
 
       input {
         padding: 0.5rem 0.4rem;
         outline: none;
         height: 1rem;
-        width: 60%;
+        width: 100%;
         border: none;
         border-radius: 0.2rem 0 0 0.2rem;
         font-size: 0.95rem;
@@ -27,8 +30,10 @@
 
       button {
         color: var(--mainBlack);
-        width: 4rem;
-        height: 2.1rem;
+        background: #ffffff;
+        border: none;
+        width: 2rem;
+        height: 2rem;
         cursor: pointer;
         transition: all 0.5s;
         border-radius: 0 0.2rem 0.2rem 0;
