--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -65,7 +65,7 @@
 
       .alert {
         width: 90% !important;
-        padding: 0.2rem !important;
+        padding: 0.5rem 0.3rem !important;
       }
     }
 
