--- a/src/styles/_searchBar.scss
+++ b/src/styles/_searchBar.scss
@@ -30,12 +30,11 @@
 
       button {
         color: var(--mainBlack);
-        background: #ffffff;
+        background: var(--mainWhite);
         border: none;
         width: 2rem;
         height: 2rem;
         cursor: pointer;
-        transition: all 0.5s;
         border-radius: 0 0.2rem 0.2rem 0;
         outline: none;
         font-size: 0.9rem;
