--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -20,7 +20,7 @@
       flex-flow: row wrap;
       padding: 2rem 0;
       margin: 0 auto;
-      max-width: 100%;
+      width: 62rem;
       // background: #002;
 
       .product {
@@ -57,8 +57,31 @@
   }
 }
 
+@media screen and (width: 768px) {
+  .products {
+    // background: #002;
+    max-width: 41rem !important;
+
+    .product {
+      margin: 1rem 1.3rem !important;
+      width: 18rem !important;
+
+      &:first-child {
+        margin-left: 1rem !important;
+      }
+
+      img {
+        width: 100%;
+        height: 15rem !important;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 650px) {
   .products {
+    max-width: 490px !important;
+    background: red;
     .product {
       img {
         height: 13rem !important;
@@ -69,6 +92,7 @@
 
 @media screen and (max-width: 500px) {
   .products {
+    width: 100% !important;
     .product {
       img {
         height: 13rem !important;
