--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -101,15 +101,15 @@
   }
 }
 
-// @media screen and (max-width: 250px) {
-//   .products {
-//     .product {
-//       img {
-//         height: 8rem !important;
-//       }
-//     }
-//   }
-// }
+@media screen and (max-width: 250px) {
+  .products {
+    .product {
+      img {
+        height: 8rem !important;
+      }
+    }
+  }
+}
 
 @media screen and (min-width: 1024px) {
   .products {
