--- a/src/styles/_productDetail.scss
+++ b/src/styles/_productDetail.scss
@@ -9,7 +9,7 @@
     padding: 2rem;
     margin: -2rem 1rem;
     // background: green;
-    max-width: 800px;
+    max-width: 500px;
 
     .image-detail {
       margin: 0 auto;
@@ -22,6 +22,8 @@
     }
 
     .product-details {
+      // background: red;
+      // width: 50rem !important;
       .main-details {
         padding: 1rem;
 
@@ -29,12 +31,22 @@
           padding: 0.2rem 0;
         }
 
-        .product-name {
+        .detail {
+          margin: 0.4rem 0;
+
+          b {
+            font-size: 1.2rem;
+          }
+        }
+
+        .product-name,
+        .product-description,
+        .product-price,
+        .product-category {
           font-size: 1.2rem;
         }
 
         .product-price {
-          font-size: 1.5rem;
           font-weight: 600;
           color: var(--subBlue);
         }
@@ -51,26 +63,28 @@
             color: var(--mainRed);
           }
         }
-
-        .product-description {
-          font-size: 1.2rem;
-        }
       }
     }
 
     .buttons {
       button {
         margin: 0.3rem 0.5rem;
-        border-radius: 10rem !important;
+        width: 10rem !important;
+        border-radius: 5px !important;
       }
     }
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 760px) {
   .container {
     height: 28rem;
     padding: 5rem 0;
+
+    .elements {
+      display: flex;
+      max-width: 1000px !important;
+    }
   }
 
   .details-page {
@@ -80,6 +94,19 @@
       align-items: flex-start;
       flex-wrap: wrap;
       flex-direction: row;
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .container {
+    .elements {
+      .image-detail {
+        img {
+          width: 30rem;
+          height: 30rem;
+        }
+      }
     }
   }
 }
