--- a/src/styles/_searchBar.scss
+++ b/src/styles/_searchBar.scss
@@ -1,18 +1,14 @@
 /* Stylings for SearchBar */
 .search_box {
-  position: sticky;
-  top: 5.4rem;
-
   .search_section {
     display: flex;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.8);
     padding: 1rem;
 
     div {
       width: 100%;
       display: flex;
       // background-color: red;
-      // margin: 0 auto;
 
       input {
         padding: 0.5rem 0.4rem;
@@ -43,8 +39,17 @@
     }
   }
 }
-@media screen and (max-width: 700px) {
+
+@media screen and (min-width: 760px) {
   .search_box {
-    position: static;
+    position: sticky;
+    top: 5.4rem;
+
+    .search_section {
+      div {
+        width: 70%;
+        margin: 0 auto;
+      }
+    }
   }
 }
