--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -297,3 +297,13 @@ body {
   }
 }
 /* Stylings for project alerts ends */
+
+/* Stylings for product header starts */
+.products_header {
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: cursive;
+  font-weight: 600;
+  color: var(--subBlue);
+}
+/* Stylings for product header */
