made ui improvements

--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -41,8 +41,8 @@
           }
 
           .product_price {
-            color: var(--mainRed);
-            font-size: 1.2rem;
+            color: var(--subBlue);
+            font-size: 1.1rem;
           }
         }
       }
