made improvement in app

--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -50,7 +50,7 @@
     background: var(--gray);
     width: 30rem;
     margin: 1rem 2rem;
-    height: 10rem;
+    height: 20%;
     padding: 0.5rem;
     border-radius: 0.3rem;
 
