--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -29,8 +29,17 @@
 html,
 body {
   background: var(--subWhite);
-  height: 100%;
+  min-height: 100%;
   /* background: red; */
+}
+
+html {
+  background: var(--subBlue);
+}
+
+body {
+  max-width: 110rem;
+  margin: 0 auto;
 }
 
 /* Styling for the nav bar starts */
