--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -29,7 +29,7 @@
 html,
 body {
   background: var(--subWhite);
-  min-height: 100%;
+  min-height: 65rem;
   /* background: red; */
 }
 
@@ -40,6 +40,7 @@ html {
 body {
   max-width: 110rem;
   margin: 0 auto;
+  // min-height: 100%;
 }
 
 /* Styling for the nav bar starts */
