--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -12,26 +12,36 @@
       flex-flow: row wrap;
       padding: 2rem 0;
       margin: 0 auto;
-      width: 62rem;
+      width: 100%;
       // background: #002;
 
       .product {
-        margin: 1.2rem auto;
-        padding-bottom: 1rem;
-        width: 70%;
-        border-bottom: 0.1rem solid var(--mainBlack);
+        display: flex;
+        justify-content: left;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        margin: 1.2rem 0.5rem;
+        padding: 2rem 1rem;
+        width: 40rem;
+        max-width: 80rem;
+        // border-bottom: 0.1rem solid var(--mainBlack);
         border-radius: 3px;
         overflow: hidden;
         box-shadow: 0 0 0.2rem var(--mainBlack);
         background: #eee;
-        // transition: all 0.4s;
+        transition: all 0.2s;
 
         img {
-          width: 100%;
-          height: 20rem;
+          width: 20rem;
+          height: 25rem;
         }
 
-        .product_detail {
+        .product-details {
+          padding: 2rem 0;
+          // background-color: green;
+          margin: 70px 5px;
+          width: 100%;
+          text-align: left;
           .product_name,
           .product_category,
           .product_detail,
@@ -55,43 +65,20 @@
   }
 }
 
-@media screen and (max-width: 1023px) {
-  .products {
-    max-width: 41.3rem !important;
-
-    .product {
-      margin: 1rem 1.3rem !important;
-      width: 18rem !important;
-
-      img {
-        width: 100%;
-        height: 15rem !important;
-      }
-    }
-  }
-}
-
 @media screen and (max-width: 650px) {
   .products {
-    max-width: 490px !important;
     .product {
-      margin: 1rem 1.3rem !important;
-      width: 100% !important;
-
-      &:first-child {
-        margin-left: 1.3rem !important;
-      }
+      max-width: 30rem !important;
 
       img {
-        height: 13rem !important;
+        width: 100% !important;
       }
     }
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 300px) {
   .products {
-    width: 100% !important;
     .product {
       img {
         height: 13rem !important;
@@ -100,44 +87,39 @@
   }
 }
 
-@media screen and (max-width: 250px) {
+@media screen and (min-width: 700px) {
   .products {
     .product {
-      img {
-        height: 8rem !important;
-      }
+      flex-wrap: nowrap !important;
     }
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1280px) {
   .products {
-    width: 62rem;
-
     .product {
-      margin: 1rem 1.3rem !important;
-      width: 18rem !important;
-
-      img {
-        width: 100%;
-        height: 15rem !important;
-      }
+      margin: 1.2rem !important;
+      margin-left: 1.7rem !important;
+      margin-right: 1rem !important;
+      width: 45rem !important;
     }
   }
 }
 
-@media screen and (min-width: 1350px) {
+@media screen and (max-width: 1650px) {
   .products {
-    width: 83rem !important;
-
     .product {
-      margin: 1rem 1.3rem !important;
-      width: 18rem !important;
+      width: 100rem !important;
+      margin: 1.2rem auto !important;
+    }
+  }
+}
 
-      img {
-        width: 100%;
-        height: 15rem !important;
-      }
+@media screen and (max-width: 1100px) {
+  .products {
+    .product {
+      width: 90% !important;
+      margin: 1.2rem auto !important;
     }
   }
 }
