made improvement in features

--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -37,6 +37,7 @@
         }
 
         .product-details {
+          min-height: 6rem;
           .product_name,
           .product_category,
           .product_detail,
