made cart improvements

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -276,6 +276,7 @@ body {
   &.alert-danger {
     background: rgba(240, 126, 145, 0.4);
     opacity: 0.7;
+    font-weight: bold;
   }
 }
 /* Stylings for project alerts ends */
