--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -168,6 +168,7 @@ body {
     }
 
     .nav-ul {
+      display: block !important;
       max-height: 40%;
       width: 100%;
       overflow-y: scroll;
