made improvement in features

--- a/src/styles/_bgImage.scss
+++ b/src/styles/_bgImage.scss
@@ -1,10 +1,8 @@
 .main-bg-img {
   background-blend-mode: multiply;
-  background: url("/images/background.jpg") rgba(0, 0, 0, 0.5);
+  background: url("/images/background.jpg") rgba(0, 0, 0, 0.5) top no-repeat;
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: scroll;
+  background-attachment: fixed;
   height: 32rem;
   width: 100%;
   margin-bottom: 50px;
@@ -12,7 +10,6 @@
   .bg-texts {
     padding: 200px 0 0;
     .main-bg-text {
-      // background-color: green;
       text-align: center;
       color: var(--mainWhite);
       padding: 10px 0 0;
@@ -30,7 +27,6 @@
 @media screen and (max-width: 500px) {
   .main-bg-img {
     height: 20rem !important;
-    // background: green !important;
 
     .bg-texts {
       padding: 100px 0;
