added background image

--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -10,7 +10,7 @@
       justify-content: left;
       align-items: flex-start;
       flex-flow: row wrap;
-      padding: 2rem 0;
+      padding: 0.5rem 0 2rem;
       margin: 0 auto;
       width: 62rem;
       // background: #002;
