--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -138,14 +138,14 @@ body {
     transform: translateY(0) !important;
   }
 
-  @keyframes navTransition {
-    from {
-      opacity: 0.5;
-    }
-    to {
-      opacity: 0.9;
-    }
-  }
+  // @keyframes navTransition {
+  //   from {
+  //     opacity: 0.5;
+  //   }
+  //   to {
+  //     opacity: 0.9;
+  //   }
+  // }
 
   .nav-section {
     header {
@@ -169,7 +169,7 @@ body {
 
     .nav-ul {
       display: block !important;
-      max-height: 40%;
+      height: 15rem;
       width: 100%;
       overflow-y: scroll;
       background: var(--mainGrey);
@@ -177,11 +177,11 @@ body {
       opacity: 0.9;
       overflow-y: scroll;
       position: fixed;
-      top: 3.5rem;
+      top: 5.3rem;
       transition: all 0.5s !important;
 
       li {
-        margin-top: 1.3rem !important;
+        margin-top: 1rem !important;
         margin-left: -1rem !important;
         // background: red;
 
@@ -277,6 +277,7 @@ body {
   &.alert-danger {
     background: rgba(240, 126, 145, 0.4);
     opacity: 0.7;
+    font-weight: bold;
   }
 }
 /* Stylings for project alerts ends */
