--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -18,7 +18,7 @@
       .product {
         margin: 1.2rem auto;
         padding-bottom: 1rem;
-        width: 70%;
+        // width: 70rem;
         border-bottom: 0.1rem solid var(--mainBlack);
         border-radius: 3px;
         overflow: hidden;
@@ -27,11 +27,16 @@
         // transition: all 0.4s;
 
         img {
-          width: 100%;
+          background-color: green;
+          margin: 15px 5%;
+          margin-right: 0;
+          width: 90%;
           height: 20rem;
         }
 
         .product-details {
+          width: 90%;
+          margin: 0 auto;
           .product_name,
           .product_category,
           .product_detail,
@@ -51,6 +56,7 @@
           .product_price {
             color: var(--subBlue);
             font-size: 1.1rem;
+            font-weight: 600;
           }
         }
       }
