--- a/src/styles/_productDetail.scss
+++ b/src/styles/_productDetail.scss
@@ -2,12 +2,12 @@
 // Choice product details stylings
 .container {
   max-width: 1500px;
-  margin: 1rem auto;
+  margin: 0.5rem auto;
   // background: red;
 
   .elements {
-    padding: 2rem;
-    margin: -2rem 1rem;
+    padding: 0 2rem;
+    margin: -4.5rem 1rem;
     // background: green;
     max-width: 500px;
 
