made improvements in product details styles

--- a/src/styles/_productDetail.scss
+++ b/src/styles/_productDetail.scss
@@ -30,7 +30,7 @@
         }
 
         .detail {
-          margin: 0.4rem 0;
+          margin: 0.4rem 0 0.8rem;
 
           b {
             font-size: 1.2rem;
