made styling changes in product and product details components

--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -96,7 +96,11 @@
       }
 
       img {
-        height: 13rem !important;
+        margin: 0 !important;
+          // margin-right: 0;
+          width: 100% !important;
+          height: 22rem !important;
+          border-radius: 0 !important;
       }
     }
   }
