--- a/src/styles/_bgImage.scss
+++ b/src/styles/_bgImage.scss
@@ -2,7 +2,7 @@
   background-blend-mode: multiply;
   background: url("/images/background.jpg") rgba(0, 0, 0, 0.5) top no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: scroll;
   height: 32rem;
   width: 100%;
   margin-bottom: 50px;
