--- a/src/styles/_productDetail.scss
+++ b/src/styles/_productDetail.scss
@@ -2,12 +2,12 @@
 // Choice product details stylings
 .container {
   max-width: 1500px;
-  margin: 0.5rem auto;
+  margin: 1rem auto;
   // background: red;
 
   .elements {
-    padding: 0 2rem;
-    margin: -4.5rem 1rem;
+    padding: 2rem;
+    margin: -2rem 1rem;
     // background: green;
     max-width: 500px;
 
@@ -30,7 +30,7 @@
         }
 
         .detail {
-          margin: 0.4rem 0 0.8rem;
+          margin: 0.4rem 0;
 
           b {
             font-size: 1.2rem;
