--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -31,11 +31,11 @@
         }
 
         img {
-          margin: 12px 5% 5px;
-          margin-right: 0;
-          width: 90%;
-          height: 20rem;
-          border-radius: 5px;
+          margin: 0 ;
+          // margin-right: 0;
+          width: 100% ;
+          height: 20rem ;
+          border-radius: 0 ;
         }
 
         .product-details {
@@ -96,11 +96,7 @@
       }
 
       img {
-        margin: 0 !important;
-          // margin-right: 0;
-          width: 100% !important;
           height: 22rem !important;
-          border-radius: 0 !important;
       }
     }
   }
