--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -53,6 +53,10 @@
             }
           }
 
+          .product_name{
+            font-weight: 600;
+          }
+
           .product_category {
             color: var(--mainRed);
           }
