--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -198,11 +198,12 @@ body {
           margin-bottom: 0.1rem !important;
         }
 
-        a {
+        a,
+        .logout_text {
           font-size: 1.1rem;
           font-weight: 600;
           // margin-top: 4rem !important;
-          padding-right: 80%;
+          // padding-right: 80%;
           padding-left: 1rem;
           // background: red;
         }
